--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/telemedicine
+MONGO_URI=mongodb+srv://kanishk:Password%40123@blog-app.7u0dvkj.mongodb.net/telemedicine
 JWT_SECRET=supersecretkey
 PORT=5000
